# LGP

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: learn_poly.py
src/LGP/: LGP.py  _typing.py  crossover.py  evaluation.py  fitness.py  mutation.py  population.py  selection.py
tests/test_crossover/: test_two_point_crossover.py
tests/test_evaluation/: test_evaluation.py  test_register.py
tests/test_fitness/: test_mimic_data.py
tests/test_lgp/: test_lgp.py
tests/test_mutation/: test_decay.py  test_instruction_mutation.py
tests/test_selection/: test_tournament_selection.py
